--- a/iHerb webscraper/iHerb_best_seller_products_scraper.ipynb
+++ b/iHerb webscraper/iHerb_best_seller_products_scraper.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Install Selenium\n",
+    "**1. Install Selenium**\n",
+    "\n",
     "Open bash and run:\n",
     "```bash\n",
     "pip install selenium\n",
     "```\n",
-    "#### 2. Install driver\n",
+    "**2. Install driver**\n",
     "\n",
     "1. [Download browser driver](https://selenium-python.readthedocs.io/installation.html#drivers)\n",
     "2. Move to a location of choice and unzip."
@@ -17,29 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "WebDriverException",
-     "evalue": "Message: 'chromedriver' executable needs to be in PATH. Please see https://sites.google.com/a/chromium.org/chromedriver/home\n",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/selenium/webdriver/common/service.py\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     71\u001b[0m             \u001b[0mcmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_line_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m             self.process = subprocess.Popen(cmd, env=self.env,\n\u001b[0m\u001b[1;32m     73\u001b[0m                                             \u001b[0mclose_fds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplatform\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'Windows'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, encoding, errors, text)\u001b[0m\n\u001b[1;32m    853\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 854\u001b[0;31m             self._execute_child(args, executable, preexec_fn, close_fds,\n\u001b[0m\u001b[1;32m    855\u001b[0m                                 \u001b[0mpass_fds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcwd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36m_execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, start_new_session)\u001b[0m\n\u001b[1;32m   1701\u001b[0m                         \u001b[0merr_msg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrerror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1702\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1703\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr_msg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/data/chromedriver'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mWebDriverException\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-386bc8fa0b10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Use the link path to your driver:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mchrome_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/Users/data/chromedriver'\u001b[0m  \u001b[0;31m# copy and paste the path to your driver here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mdriver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchrome_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mdriver1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchrome_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/selenium/webdriver/chrome/webdriver.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, executable_path, port, options, service_args, desired_capabilities, service_log_path, chrome_options, keep_alive)\u001b[0m\n\u001b[1;32m     71\u001b[0m             \u001b[0mservice_args\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mservice_args\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m             log_path=service_log_path)\n\u001b[0;32m---> 73\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mservice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/selenium/webdriver/common/service.py\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrno\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0merrno\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mENOENT\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m                 raise WebDriverException(\n\u001b[0m\u001b[1;32m     82\u001b[0m                     \"'%s' executable needs to be in PATH. %s\" % (\n\u001b[1;32m     83\u001b[0m                         os.path.basename(self.path), self.start_error_message)\n",
-      "\u001b[0;31mWebDriverException\u001b[0m: Message: 'chromedriver' executable needs to be in PATH. Please see https://sites.google.com/a/chromium.org/chromedriver/home\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
@@ -99,16 +80,27 @@
     "\n",
     "            for containers in review_containers:\n",
     "                driver.implicitly_wait(5) # waiting for the browser to see the website elements\n",
+    "                # there are bullet points of the description so we have to join the each bullet point with a comma\n",
     "                elements = ', '.join([item.text for item in driver.find_elements_by_css_selector(\"[itemprop='description'] > ul:nth-of-type(1) > li\")])\n",
+    "                # append the item description\n",
     "                item_description.append(elements)\n",
+    "                # append the image link of the item\n",
     "                item_images.append(driver.find_element_by_xpath('//*[@id=\"product-image\"]/div[1]/a').get_attribute('href'))\n",
+    "                # append the brand of the item\n",
     "                item_brand.append(driver.find_element_by_xpath('.//*[@id=\"brand\"]/a/span/bdi').get_attribute('textContent'))\n",
+    "                # append the price of the item\n",
     "                item_prices.append(driver.find_element_by_css_selector('[id=\"price\"]').text)\n",
+    "                # append the name of item\n",
     "                item_names.append(driver1.find_element_by_css_selector('[class=\"nav-product-link-text\"] span').text)\n",
-    "                total_rate.append(driver1.find_element_by_class_name('css-i36p8g').text)       \n",
+    "                # append the total rating score \n",
+    "                total_rate.append(driver1.find_element_by_class_name('css-i36p8g').text)\n",
+    "                # append the review content       \n",
     "                review_contents.append(containers.find_element_by_class_name('review-text').text)\n",
+    "                # append the number of \"helpful\" rating\n",
     "                product_helpful.append(containers.find_element_by_css_selector('[title=\"Helpful\"] span').text)\n",
+    "                # append the number of \"not helpful\" rating\n",
     "                product_not_helpful.append(containers.find_element_by_css_selector('[title=\"Unhelpful\"] span').text)\n",
+    "                # append the rating star\n",
     "                stars = containers.find_elements_by_class_name(\"css-172co2l\")\n",
     "                rating = 0\n",
     "                for star in stars:\n",
@@ -121,7 +113,16 @@
     "\n",
     "driver.quit()\n",
     "\n",
-    "data = {'item_image_link' : item_images,'item_brand' : item_brand, 'item_name' : item_names, 'item_description': item_description, 'item_price' : item_prices, 'total_rating' : total_rating, 'review_contents' : review_contents , 'individual_rating' : member_rating , 'product_helpful' : product_helpful, 'product_not_helpful' : product_not_helpful}\n",
+    "data = {'item_image_link' : item_images,\n",
+    "        'item_brand' : item_brand, \n",
+    "        'item_name' : item_names, \n",
+    "        'item_description': item_description, \n",
+    "        'item_price' : item_prices, \n",
+    "        'total_rating' : total_rating, \n",
+    "        'review_contents' : review_contents , \n",
+    "        'individual_rating' : member_rating , \n",
+    "        'product_helpful' : product_helpful, \n",
+    "        'product_not_helpful' : product_not_helpful}\n",
     "\n",
     "# Creates a dataframe \n",
     "\n",
@@ -163,8 +164,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd076eb0f60f4e3e41303208ce3cecc3840c7c75a82d8e9f686aca3135fdcb2629a",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
